# ffmpeg-batch-convert

./: .gitignore  CLAUDE.md  README.md  __init__.py  convert.sh  main.py  pyproject.toml
luts/: iPhone_2020_to_709_33.cube
