[project]
name = "ffmpeg-batch-convert"
version = "0.1.0"
description = "Video conversion tool with HLG hardware encoding using FFmpeg"
readme = "README.md"
requires-python = ">=3.8"
dependencies = []
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
license = {text = "MIT"}
keywords = ["ffmpeg", "video", "conversion", "hlg", "hardware-encoding"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Multimedia :: Video :: Conversion",
]

[project.scripts]
ffmpeg-batch-convert = "main:main"

[project.urls]
Homepage = "https://github.com/yourusername/ffmpeg-batch-convert"
Repository = "https://github.com/yourusername/ffmpeg-batch-convert"
Issues = "https://github.com/yourusername/ffmpeg-batch-convert/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
